fixed h2 to align center in mobile too, resized hero-tree to be bigger in mobile

--- a/src/styles/_about-section.scss
+++ b/src/styles/_about-section.scss
@@ -46,3 +46,11 @@
     }
   }
 }
+@include viewport(mobile) {
+  #about-section,
+  #ssss-section {
+    h2 {
+      text-align: center;
+    }
+  }
+}
