--- a/src/styles/_hero-section.scss
+++ b/src/styles/_hero-section.scss
@@ -22,7 +22,7 @@
   @include viewport(mobile) {
     flex-direction: column-reverse;
     img#tree-cloud {
-      width: 75%;
+      width: 90%;
       z-index: 0;
     }
   }
